--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,24 +38,24 @@
 
 					<footer>
 						<div class="footer">
-							<div class='mail'>
+							<div class='footer_img'>
 								<a href="{{ path('app_contact') }}">
                                 <img src="{{ asset('/images/mail.png') }}" alt="contact">
 							</div>
                             <a>
 
-							<div class='facebook'>
+							<div class='footer_img'>
 								<a href="https://www.facebook.com/diti.wayd/">
 									<img src="{{ asset('/images/facebook.png') }}" alt="facebook">
 								</div>
 							</a>
 
-							<div class='instagram'>
+							<div class='footer_img'>
 								<a href="https://www.instagram.com/diti.web/"><img src="{{ asset('/images/instagram.png') }}" alt="instagram">
 								</div>
 							</a>
 
-							<div class='pinterest'>
+							<div class='footer_img'>
 								<a href="https://www.pinterest.fr/carmasoldietric/"><img src="{{ asset('/images/pinterest.png') }}" alt="pinterest">
 								</div>
 							</a>
