--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,89 +1,81 @@
 body {
-    height: 100%; 
+  height: 100%;
 }
 
 .lineArticle {
-    border:solid;
+  border: solid;
 }
 
 .content {
-    color: black;
-    font-weight: bold;
-    font-size: large;
-    width: 100%;
-    min-height: 100%;
-    position: absolute;
-    z-index: 2;
-    background-image: url('/images/madras.png'); 
-}  
+  color: black;
+  font-weight: bold;
+  font-size: large;
+  width: 100%;
+  min-height: 100%;
+  position: absolute;
+  z-index: 2;
+  background-image: url("/images/madras.png");
+}
 
-.container-card{
-    display: flex;
-    flex-direction: row;
+.container-card {
+  display: flex;
+  flex-direction: row;
 }
 
 .card {
-    width: 18rem;
-    height:300px
+  width: 18rem;
+  height: 300px;
 }
 
-@media (max-width: 400px) { 
-.container-card{
+@media (max-width: 400px) {
+  .container-card {
     display: flex;
     flex-direction: column;
-    }
-} 
+  }
+}
+
+@media (max-width: 390px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer img {
+    flex-direction: row;
+    display: flex;
+    width: 50px;
+  }
+
+  .footer div {
+    margin: 0 10px;
+  }
+}
 
 footer {
-    background-color: #f2f2f2;
-    padding: 20px;
-    text-align: center;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+  background-color: #f2f2f2;
+  padding: 2px;
+  text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 footer div {
-    margin: 0 50px;
+  margin: 0 50px;
 }
 
-.facebook img{
-    width: 50px;
-    height: 50px;
-}
-
-.instagram img{
-    width: 50px;
-    height: 50px;
+.footer_img img { 
+  width: 50px;
+  height: 50px;
 }
 
 
-.pinterest img{
-    width: 50px;
-    height: 50px;
-}
-
-.mail img{
-    width: 50px;
-    height: 50px;
-}
-
-
-.footer{
-    display: flex;
-    flex-direction: row;
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .article-img {
-    width: 110px;
+  width: 85px;
 }
-
-
-
-
-
-
-
-
-
