--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modifier L'utilisateur {% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>Modifier L'utilisateur</h1>
 
     {{ include('profile/_form.html.twig', {'button_label': 'Update'}) }}
 
