--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -19,6 +19,6 @@
         }) }}
         {{ form_row(form.agreeTerms) }}
 
-        <button type="submit" class="btn">Enregistrer</button>
+        <button type="submit" class="btn btn-info">Enregistrer</button>
     {{ form_end(form) }}
 {% endblock %}
