--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -8,7 +8,7 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>Numero</th>
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
@@ -16,7 +16,7 @@
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>IsVerified</th>
+                <th>Valider</th>
                 <td>{{ user.isVerified ? 'Yes' : 'No' }}</td>
             </tr>
         </tbody>
