--- a/templates/admin_user/edit.html.twig
+++ b/templates/admin_user/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Modifier un utilisateur</h1>
 
-    {{ include('admin_user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('admin_user/_form.html.twig', {'button_label': 'Valider'}) }}
 
     <a href="{{ path('app_admin_user_index') }}">retour à la liste</a>
 
