--- a/templates/admin_article/edit.html.twig
+++ b/templates/admin_article/edit.html.twig
@@ -5,9 +5,10 @@
 {% block body %}
     <h1>Modifier un Article</h1>
 
-    {{ include('admin_article/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_admin_article_index') }}">retour à la liste</a>
+    {{ include('admin_article/_form.html.twig', {'button_label':'Valider'}) }}
 
     {{ include('admin_article/_delete_form.html.twig') }}
+
+    <a href="{{ path('app_admin_article_index') }}">retour à la liste</a>
+    
 {% endblock %}
