--- a/templates/admin_category/edit.html.twig
+++ b/templates/admin_category/edit.html.twig
@@ -5,9 +5,10 @@
 {% block body %}
     <h1>Créer catégorie </h1>
 
-    {{ include('admin_category/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_admin_category_index') }}">Retour à la liste</a>
+    {{ include('admin_category/_form.html.twig', {'button_label': 'Valider'}) }}
 
     {{ include('admin_category/_delete_form.html.twig') }}
+
+    <a href="{{ path('app_admin_category_index') }}">Retour à la liste</a>
+    
 {% endblock %}
