--- a/templates/admin_category/index.html.twig
+++ b/templates/admin_category/index.html.twig
@@ -8,7 +8,7 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
+                <th>Numero</th>
                 <th>Nom</th>
                 <th>actions</th>
             </tr>
