--- a/templates/admin_category/show.html.twig
+++ b/templates/admin_category/show.html.twig
@@ -8,19 +8,21 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>Numero</th>
                 <td>{{ category.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ category.name }}</td>
             </tr>
         </tbody>
     </table>
 
+    <br>
     <a href="{{ path('app_admin_category_index') }}">Retout a la liste</a>
-
+    <br>
     <a href="{{ path('app_admin_category_edit', {'id': category.id}) }}">Modifier</a>
-
+    <br>
     {{ include('admin_category/_delete_form.html.twig') }}
+    <br>
 {% endblock %}
