--- a/templates/admin_comment/edit.html.twig
+++ b/templates/admin_comment/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Modifier un commentaire</h1>
 
-    {{ include('admin_comment/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('admin_comment/_form.html.twig', {'button_label': 'Valider'}) }}
 
     <a href="{{ path('app_admin_comment_index') }}">retour à la liste</a>
 
