--- a/templates/admin_user/show.html.twig
+++ b/templates/admin_user/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}utilisateur{% endblock %}
+{% block title %}Utilisateur{% endblock %}
 
 {% block body %}
-    <h1>utilisateur</h1>
+    <h1>Utilisateur</h1>
 
     <table class="table">
         <tbody>
@@ -18,9 +18,11 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_admin_user_index') }}">retour à la liste</a>
-
     <a href="{{ path('app_admin_user_edit', {'id': user.id}) }}">modifier</a>
-
+    <br>
+    <br>
+    <a href="{{ path('app_admin_user_index') }}">retour à la liste</a>
+    <br>
     {{ include('admin_user/_delete_form.html.twig') }}
+    <br>
 {% endblock %}
