--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,14 +2,14 @@
 {% extends 'base.html.twig' %}
 {% form_theme form 'bootstrap_5_layout.html.twig' %}
 
-{% block title %}enregistrement{% endblock %}
+{% block title %}Enregistrement{% endblock %}
 
 {% block body %}
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>enregistrement</h1>
+    <h1>Enregistrement</h1>
 
     {{ form_start(form) }}
         {{ form_row(form.pseudo) }}
@@ -17,7 +17,7 @@
         {{ form_row(form.plainPassword, {
             label: 'Password'
         }) }}
-        {{ form_row(form.agreeTerms) }}
+        {# {{ form_row(form.agreeTerms) }} #}
 
         <button type="submit" class="btn btn-info">Enregistrer</button>
     {{ form_end(form) }}
