--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -5,6 +5,6 @@
 {% block body %}
     <h1>Modifier L'utilisateur</h1>
 
-    {{ include('profile/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('profile/_form.html.twig', {'button_label': 'Valider'}) }}
 
 {% endblock %}
